<resources>
    <string name="app_name">SwitcherGame</string>
    <string name="switcher_game">SWITCHER GAME</string>
    <string name="play">play!</string>
    <string name="instructions">instructions</string>
    <string name="options">options</string>
    <string name="exit">exit</string>
    <string name="levels">levels</string>
    <string name="cont">continue</string>
    <string name="game_instructions">blabla bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blablacy bl ala bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blablacy bl ala bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blablacy bl ala bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blablacy bl ala bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blablacy bl ala bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blablacy bl ala bl ablab blabla bl ablab blabla bl ablab blabla bl ablab blablacy bl ala bl ablab blabla bl a\nblab blabla bl ablab blabla bl ablab blablacy bl ablab blabla  bl ablab blabla \nblcyx ablab blabla bl ablcyxcab blabla bl ablab blabla bl cyx ablab blabla bl ablab</string>
</resources>
